
  * Merge changes from upstream 1.19-1 package.
  * Use --numeric to speed up netstat output.
  * Handle IPv6 in netstat output.
  * Use a placeholder process name when the real name of a listening
    process is not provided by netstat.
  * When sending system health info is disabled, send empty health messages
    to keep the adept server happy, rather than omitting them entirely.

 -- Oliver Jowett <oliver@mutability.co.uk>  Tue, 30 Dec 2014 00:27:48 +0000

piaware (1.19-1) stable; urgency=medium

  * New compression techniques reduce upstream bandwidth by 2/3rds without
    filtering any additional messages.

  * Disconnect from the server after many unrecognized server messages.

  * Report full version when running piaware -v to get version number.

  * Remove raspi-copies-and-fills from dependencies.  This makes the piaware
  Debian package compatible with more systems not based on Raspberry Pi.

 -- FlightAware Developers <adsb-devs@flightaware.com>  Tue, 25 Nov 2014 19:26:29 +0000

piaware-mutability (1.18-2+2mu-2) unstable; urgency=medium

  * Remove redundant override_dh_install in debian/rules
  * Prefer to report the Debian package version when available
  * Remove a redundant ARGS setting in debian/piaware.init
  * Rename package so it doesn't interfere with the official package.
  * Add Conflicts: piaware as both can't be installed at the same time.
  * Depend on adduser to fix lintian warning.
  * Add a config option to disable sending system health information.
  * Add Build-Depends: tcl8.5 to allow the package index to be regenerated.
  * Delete the generated package index during package clean.
  * Reenable updates using a hook-script system to actually execute tasks.
  * Provide an example (commented) sudoers file that allows the provided
    hook scripts to execute some things as root.
  * Add Recommends: sudo.
  * Change the individual dependencies on dump1090/faup1090 to a dependency